<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:baselineAligned="false"
    tools:context=".MediaFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:baselineAligned="false"
        android:background="@drawable/ic_border_color"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_border_color"
            android:padding="16dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/content_description_image"
                android:alpha="0.5"
                android:src="@drawable/ic_baseline_android_128"
                app:tint="?attr/elevationOverlayColor" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="10dp"
                android:gravity="end"
                android:text="@string/fragment_text"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:textColor="?attr/elevationOverlayColor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/linear_layout_buttons"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="end"
                android:maxLines="4"
                android:text="@string/lorem_ipsum_long"
                android:textAppearance="?attr/textAppearanceCaption" />

            <LinearLayout
                android:id="@+id/linear_layout_buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="8dp"
                android:gravity="end|bottom" >

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/thumb_up_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:iconSize="24dp"
                    app:icon="@drawable/ic_baseline_thumb_up_24"
                    style="?attr/borderlessButtonStyle" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/favorite_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:iconSize="24dp"
                    app:icon="@drawable/ic_baseline_favorite_24"
                    style="?attr/borderlessButtonStyle" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/share_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:iconSize="24dp"
                    app:icon="@drawable/ic_baseline_share_24"
                    style="?attr/borderlessButtonStyle" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
